# LTH_backtest

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  pyproject.toml  run
.github/workflows/: ci.yml
lth_backtest/: __init__.py  analytics.py  cli.py  comparison.py  data.py  engine.py  models.py  parameter_sweep.py  performance.py  precision.py  previous_high.py  random_compare.py  reporting.py  round_analysis.py  strategy_random.py  web.py
lth_backtest/static/: app.js  index.html  styles.css
tests/: test_comparison.py  test_data.py  test_engine.py  test_parameter_sweep.py  test_performance.py  test_previous_high.py  test_random_compare.py  test_reporting.py  test_round_analysis.py  test_strategy_random.py  test_web.py  test_web_api.py
tests/fixtures/: sample-TQQQ.csv
