[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lth-backtest"
version = "2.3.1"
description = "Precision-first Infinite Buying V4 backtester with a local browser UI"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "wkdeogh" }]
dependencies = []

[project.scripts]
lth-backtest = "lth_backtest.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lth_backtest*"]

[tool.setuptools.package-data]
lth_backtest = ["static/*.html", "static/*.css", "static/*.js"]
